# torinoscan

./: .gitignore  CMakeLists.txt  README.md  TODO  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramwidgetgroup.cpp  paramwidgetgroup.h  protocoliface.cpp  protocoliface.h  txt-to-json.cpp  txt-to-yaml.cpp  utils.cpp  utils.h
ecu-defs/: 355-f1-marelli-tcu.json  355-f1-marelli-tcu.yaml  512tr-motronic-left.json  512tr-motronic-left.yaml  550-bilstein-suspension.json  550-bilstein-suspension.yaml  README.md  f355-bilstein-suspension.json  f355-bilstein-suspension.yaml  f355-motronic-5.2.json  f355-motronic-5.2.yaml  schema.json
json/: 355-f1-marelli-tcu-notes.txt  355-f1-marelli-tcu.json  512tr-motronic-left.json  f355-motronic-5.2.json  schema.json
src/: actuatorwidgetgroup.cpp  actuatorwidgetgroup.h  ecuconfig.cpp  ecuconfig.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramtype.h  paramwidgetgroup.h  protocoliface.cpp  protocoliface.h  protocoltype.h  utils.cpp  utils.h
